src/objects/Class_Period__c.object
<CustomObject>
    <description>Represent a block or blocks of time in which classes are being held.</description>
    <fields>
        <fullName>Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Educational Institution associated with this period. For example, a school within a district.</description>
        <inlineHelpText>The Educational Institution associated with this period. For example, a school within a district.</inlineHelpText>
        <label>Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Class Periods</relationshipLabel>
        <relationshipName>Class_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time of day the period ends.</description>
        <inlineHelpText>The time of day the period ends.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The time of day the period starts.</description>
        <inlineHelpText>The time of day the period starts.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Class Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>